# QuakeRelay

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.online.yaml  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
backend/alembic/: env.py
backend/alembic/versions/: 13aa8a52fffc_initial_schema.py  2f34c81d7a20_add_estimation_status.py  74c829a5e9f1_add_telegram_channel.py  8c51a620b7ef_add_source_latest_payload.py  b7d912ef463a_add_weather_rankings.py  c4a3180f9d22_purge_deleted_location_impacts.py
backend/quakerelay/: __init__.py  api.py  backup.py  collector.py  config.py  crypto.py  db.py  events.py  fusion.py  geo.py  ingest.py  intensity.py  main.py  models.py  notifications.py  parsers.py  schemas.py  sources.py  weather.py
backend/tests/: conftest.py  test_fusion.py  test_geo.py  test_intensity.py  test_parsers.py  test_sources.py  test_telegram.py  test_time_serialization.py  test_weather.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.test.ts  api.ts  estimation.ts  main.tsx  presentation.test.ts  presentation.ts  revisions.ts  styles.css  time.ts  types.ts
frontend/src/components/: EventMap.tsx  LocationPicker.tsx
frontend/src/pages/: EventDetailPage.tsx  EventsPage.tsx  LocationsPage.tsx  OverviewPage.tsx  SourcesPage.tsx  WeatherPage.tsx  WebhooksPage.tsx
